# VIIPER

./: .gitignore  Makefile  README.md  go.mod  go.sum  mkdocs.yml  versioninfo.json  vsc.code-workspace
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md
.github/scripts/: generate-changelog.sh
.github/workflows/: PR_check.yml  build_base.yml  clients_ci.yml  docs-deploy.yml  generate-changelog.yml  release.yml  snapshots.yml
_testing/: test_server.go
_testing/e2e/: bench_test.go
_testing/e2e/scripts/: lat_bench.go
apiclient/: client.go  client_test.go  stream.go  stream_test.go  transport.go  transport_test.go
apitypes/: structs.go
cmd/viiper/: startup_windows.go  viiper.go
device/: context.go  options.go  report.go
device/dualshock4/: const.go  device.go  dualshock4_test.go  handler.go  helpers.go  inputstate.go
device/keyboard/: device.go  handler.go  helpers.go  inputstate.go
device/mouse/: const.go  device.go  handler.go  inputstate.go
device/steamdeck/: const.go  device.go  deviceState.go  handler.go  steamdeck_test.go
device/xbox360/: const.go  device.go  handler.go  inputstate.go
docs/: index.md  mkdocs-readme.md
docs/api/: overview.md
docs/cli/: codegen.md  configuration.md  overview.md  proxy.md  server.md
docs/clients/: c.md  cpp.md  csharp.md  generator.md  go.md  rust.md  typescript.md
docs/devices/: dualshock4.md  keyboard.md  mouse.md  steamdeck.md  xbox360.md
docs/getting-started/: installation.md  quickstart.md
docs/misc/: support.md
docs/stylesheets/: extra.css
docs/testing/: e2e_latency.md
examples/c/virtual_keyboard/: main.c
examples/c/virtual_x360_pad/: CMakeLists.txt  main.c
examples/cpp/: CMakeLists.txt
examples/csharp/virtual_keyboard/: Program.cs
examples/csharp/virtual_mouse/: Program.cs
examples/csharp/virtual_x360_pad/: Program.cs  VirtualX360Pad.csproj
examples/go/steam_deck/: main.go
examples/go/virtual_ds4/: main.go
examples/go/virtual_ds4_cli/: main.go
examples/go/virtual_keyboard/: main.go
examples/go/virtual_mouse/: main.go
examples/go/virtual_x360_pad/: main.go
examples/virtual_keyboard/: main.go
examples/virtual_mouse/: main.go
examples/virtual_x360_pad/: main.go
internal/_testing/: mocks.go
internal/cmd/: codegen.go  config.go  install_linux.go  proxy.go  server.go
internal/codegen/common/: license.go  naming.go  readme.go  wiresize.go
internal/codegen/generator/: generator.go
internal/config/: config.go
internal/configpaths/: files.go
internal/log/: logging.go  rawlogger.go
internal/registry/: devices.go
internal/testing/: api_test_helpers.go  mocks.go
internal/util/: util.go  util_windows.go
scripts/: inject-version.ps1  install.ps1  install.sh  viiper-api.ps1
testing/: usbip_client.go
testing/e2e/: bench_test.go
usb/: device.go  usbdesc.go
usbip/: usbip.go
virtualbus/: virtualbus.go
(+143 files in other folders)
